--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
-  - type: web
+  - type: static
     name: project-monitoring-interface
     env: static
     buildCommand: npm install && npm run build
     staticPublishPath: dist
-    rootDir: project-monitoring-interface-react/dist
+    rootDir: project-monitoring-interface-react
     routes:
       - type: rewrite
         source: /*
